<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="hw5.hangman.WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="35dp"
        android:textStyle="bold"
        android:text="@string/welcome_text1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/welcome_text2" />

    <!--Input IP Address-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="#333333"
        android:text="@string/welcome_textIP" />
    <EditText
        android:id="@+id/input_address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_iphint"
        android:inputType="phone" />

    <!--Input Port-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="#333333"
        android:text="@string/welcome_textPort" />
    <EditText
        android:id="@+id/input_port"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_porthint"
        android:inputType="phone" />

    <!--Connect button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_button"
        android:onClick="connectToServer" />



</LinearLayout>
